--- a/static/CMD.html
+++ b/static/CMD.html
@@ -2,10 +2,36 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>1111</title>
+    <title>CMD</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="format-detection" content="telephone=no">
+	<link rel='stylesheet' href='css/CMD.css' type='text/css'/>
+  </head>
   <body>
 
-<p>ASDASDASD</p>
+	<div class="top_box">
+		<img />
+		<p>这里是机构名称<span class="times" id="times">2017年8月17日</span></p>
+		<span class="user">宇文靖<a href="JavaScript:;">退出</a>
+		</span>
+	</div>
+
+	<div class="left_nav" id="left_nav">
+		<ul>
+	  	<li><a href="#">首页</a></li>
+	  	<li><a href="#">校区</a></li>
+	  	<li class="on"><a href="#">课程资源</a></li>
+	  	<li><a href="#">教学教研</a></li>
+	  	<li><a href="#">教职员工</a></li>
+	  	<li><a href="#">账号设置</a></li>
+	  	<li><a href="#">系统资源</a></li>
+	</ul>
+	</div>
+	<div class="right_content" id="right_content">
+		<div class="main">
+		</div>
+	</div>
+  	
 
   <!-- <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.js"></script> -->
   <script type="text/javascript" src="js/CMD.js"></script>
