--- a/DEV/demo.html
+++ b/DEV/demo.html
@@ -35,5 +35,8 @@
 	</div>
   	
   <script type="text/javascript" src="js/CMD.js"></script>
+
+  <link href='css/modules/DEMO/DEMO.css' rel='stylesheet'/>
+  <script src="js/modules/DEMO/DEMO.js"></script>
   </body>
 </html>
