--- a/DEV/demo.html
+++ b/DEV/demo.html
@@ -5,12 +5,11 @@
     <title>DEMO</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
-	<link rel='stylesheet' href='css/CMD.css' type='text/css'/>
   </head>
   <body>
 
 	<div class="top_box">
-		<img />
+		<img src="./images/code_img.png"/>
 		<p>这里是机构名称<span class="times" id="times">2017年8月17日</span></p>
 		<span class="user">宇文靖<a href="JavaScript:;">退出</a>
 		</span>
@@ -33,10 +32,5 @@
 			<p>功能模块区域</p>
 		</div>
 	</div>
-  	
-  <script type="text/javascript" src="js/CMD.js"></script>
-
-  <link href='css/modules/DEMO/DEMO.css' rel='stylesheet'/>
-  <script src="js/modules/DEMO/DEMO.js"></script>
   </body>
 </html>
