--- a/DEV/demo.html
+++ b/DEV/demo.html
@@ -10,8 +10,8 @@
 
 	<div class="top_box">
 		<img src="./images/code_img.png"/>
-		<p>这里是机构名称<span class="times" id="times">2017年8月17日</span></p>
-		<span class="user">宇文靖<a href="JavaScript:;">退出</a>
+		<p>这里是机构名称<span class="times" id="times">2017年8月19日</span></p>
+		<span class="user">宇文靖云<a href="JavaScript:;">退出</a>
 		</span>
 	</div>
 
