--- a/DEV/demo.html
+++ b/DEV/demo.html
@@ -9,8 +9,8 @@
   <body>
 
 	<div class="top_box">
-		<img src="./images/code_img.png"/>
-		<p>这里是机构名称<span class="times" id="times">2017年8月19日</span></p>
+		<img src="./images/logo.png"/>
+		<p>管好资源、看清数据<span class="times" id="times">2017年8月19日</span></p>
 		<span class="user">宇文靖云<a href="JavaScript:;">退出</a>
 		</span>
 	</div>
