--- a/DEV/demo.html
+++ b/DEV/demo.html
@@ -10,7 +10,7 @@
 
 	<div class="top_box">
 		<img src="./images/logo.png"/>
-		<p>管好资源、看清数据<span class="times" id="times">2017年8月19日</span></p>
+		<p>管好资源、看清数据<span class="times" id="times"></span></p>
 		<span class="user">宇文靖云<a href="JavaScript:;">退出</a>
 		</span>
 	</div>
