修改至统一命名

--- a/DEV/zone_informationSet.html
+++ b/DEV/zone_informationSet.html
@@ -10,7 +10,8 @@
 
 <body>
 	<div class="top_box">
-		<p>这里是机构名称<span class="times" id="times">2017年8月17日</span></p>
+		<img src="./images/logo.png"/>
+		<p>管好资源、看清数据<span class="times" id="times"></span></p>
 		<span class="user">宇文靖<a href="JavaScript:;">退出</a>
 					</span>
 	</div>
@@ -85,5 +86,4 @@
 		</div>
 	</div>
 </body>
-<script src="./js/modules/j-informationSet.js"></script>
 </html>
