--- a/DEV/zone_systemLog.html
+++ b/DEV/zone_systemLog.html
@@ -10,7 +10,8 @@
 
 <body>
 	<div class="top_box">
-		<p>这里是机构名称<span class="times" id="times">2017年8月17日</span></p>
+		<img src="./images/logo.png"/>
+		<p>管好资源、看清数据<span class="times" id="times"></span></p>
 		<span class="user">宇文靖<a href="JavaScript:;">退出</a>
 					</span>
 	</div>
@@ -29,40 +30,27 @@
 
 	<div class="main_box" id="main_box">
 		<div class="main">
-			<div class="content">
-				<ul>
-					<li class="title">
-						<h3>教师员工</h3>
-						<a href="javascript:;"><i>+</i> 添加</a>
-					</li>
-					<li class="header">
-						<p>工号</p>
-						<p>姓名</p>
-						<p>所属校区</p>
-						<p>科目</p>
-						<p>类别</p>
-						<p>入职时间</p>
-						<p>状态</p>
+			<div class="logBox">
+				<h3>系统日志</h3>
+				<ul class="logList">
+					<li class="logTitle">
+						<p>时间</p>
+						<p>账号</p>
 						<p>操作</p>
 					</li>
-
-					<li class="list">
-						<p>89756</p>
-						<p>刘小源</p>
-						<p>常营</p>
-						<p>美术</p>
-						<p>教师</p>
-						<p>2017.7.21</p>
-						<p>正常</p>
-						<p><a href="">详情</a></p>
+					<li class="logLi">
+						<p>2017年10月05日20:15:41</p>
+						<p>wuyeh0192819</p>
+						<p>本地添加班级</p>
+					</li>
+					<li class="logLi">
+						<p>2017年10月05日20:15:41</p>
+						<p>wuyeh0192819</p>
+						<p>本地添加班级</p>
 					</li>
 				</ul>
-				<button class="importBtn on"><i></i>批量导入</button>
 			</div>
 		</div>
 	</div>
 </body>
-
-<script src="./js/modules/j-teacherList.js"></script>
-
 </html>
