--- a/DEV/zone-systemLog.html
+++ b/DEV/zone-systemLog.html
@@ -52,5 +52,5 @@
 		</div>
 	</div>
 </body>
-<script src='./js/modules/j-systemLog.js'></script>
+<script src='./js/modules/zone-systemLog.js'></script>
 </html>
