获取验证码、修改密码页面

--- a/DEV/zone_login.html
+++ b/DEV/zone_login.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>DEMO</title>
+    <title>登录</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
   </head>
