校区-咨询登记~二维码页面

--- a/DEV/school_advisoryRegistration_qrcode.html
+++ b/DEV/school_advisoryRegistration_qrcode.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>校区-流水填写</title>
+	<title>校区-咨询登记-二维码</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -32,22 +32,11 @@
 		<div class="main">
 
 		
-		<div class="pub_form">
-			<ul>
-				<li>
-					<span>当日流水实收</span>
-					<input type="text" placeholder="请输入">
-				</li>
-				<li>
-					<span>当日杂项支出</span>
-					<input type="text" placeholder="请输入">
-				</li>
-				<li>
-					<span>当日杂项支出</span>
-					<textarea placeholder="请输入"></textarea>
-				</li>
-			</ul>
-			<a href="JavaScript:;" class="btn">发送</a>
+		<div class="qrcode_box">
+			<img src="./images/code_img.png" />
+			<p>此二维码30分钟内有效</p>
+			<a href="JavaScript:;" class="btn">复制二维码</a>
+			<a href="JavaScript:;" class="btn_dis">返回</a>
 		</div>
 
 
