--- a/DEV/school_advisoryRegistration_followUp.html
+++ b/DEV/school_advisoryRegistration_followUp.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>校区-咨询登记-选择试听</title>
+	<title>校区-咨询登记-跟进反馈</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -39,16 +39,13 @@
 					<em>路人甲</em>
 				</li>
 				<li>
-					<span>选择试听：</span>
-					<select>
-						<option>请选择</option>>
-					</select>
-					<select>
-						<option>请选择</option>
-					</select>
+					<span>跟进反馈：</span>
+					<!-- <textarea placeholder="请输入"></textarea> -->
+					<input type="text" placeholder="请输入">
+					<a href="JavaScript:;" class="btn add"><i>+</i>添加</a>
 				</li>
 			</ul>
-			<a href="JavaScript:;" class="btn">提交</a>
+			<a href="JavaScript:;" class="btn">确定</a>
 		</div>
 
 
