校区-咨询登记-添加页面

--- a/DEV/school_advisoryRegistration_add.html
+++ b/DEV/school_advisoryRegistration_add.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>校区-流水填写</title>
+	<title>校区-咨询登记-添加页面</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -35,19 +35,43 @@
 		<div class="pub_form">
 			<ul>
 				<li>
-					<span class="wide">当日流水实收</span>
-					<input type="text" placeholder="请输入">
+					<span>姓名</span>
+					<input type="text" class="short" placeholder="请输入">
 				</li>
 				<li>
-					<span class="wide">当日杂项支出</span>
-					<input type="text" placeholder="请输入">
+					<span>年龄</span>
+					<input type="text" class="short" placeholder="请输入">
 				</li>
 				<li>
-					<span class="wide">当日杂项支出</span>
-					<textarea placeholder="请输入"></textarea>
+					<span>性别</span>
+					<select>
+						<option>男</option>
+						<option>女</option>>
+					</select>
+				</li>
+				<li>
+					<span>住址</span>
+					<input type="text" class="long" placeholder="请输入">
+				</li>
+				<li>
+					<span>电话</span>
+					<input type="text" class="short" placeholder="请输入">
+				</li>
+				<li>
+					<span>家长姓名</span>
+					<input type="text" class="short" placeholder="请输入">
+					<span>与学员关系</span>
+					<input type="text" class="short" placeholder="请输入">
+				</li>
+				<li>
+					<span>来源</span>
+					<select>
+						<option>市场反馈</option>
+					</select>
 				</li>
 			</ul>
 			<a href="JavaScript:;" class="btn">发送</a>
+			<a href="JavaScript:;" class="btn_dis">取消</a>
 		</div>
 
 
