校区-咨询登记-添加学员页面

--- a/DEV/school_advisoryRegistration_addStudent.html
+++ b/DEV/school_advisoryRegistration_addStudent.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>校区-咨询登记-添加页面</title>
+	<title>校区-咨询登记-添加学员</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -68,10 +68,6 @@
 					<select>
 						<option>市场反馈</option>
 					</select>
-				</li>
-				<li>
-					<span>咨询内容</span>
-					<input type="text" class="long" placeholder="请输入">
 				</li>
 			</ul>
 			<a href="JavaScript:;" class="btn">确定</a>
