统一使用公共样式及html

--- a/DEV/school_advisoryRegistration.html
+++ b/DEV/school_advisoryRegistration.html
@@ -33,7 +33,7 @@
 
 			<div class="pub_list">
 				<div class="head">
-					<span>登记日期</span>
+					<span class="flex_2">登记日期</span>
 					<span>姓名</span>
 					<span>年龄</span>
 					<span>性别</span>
@@ -49,7 +49,7 @@
 				<ul class="body">
 
 					<li>
-						<div class="item"><p><span>2017.09.23</span></p></div>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
 						<div class="item"><p><span>张雪婷</span></p></div>
 						<div class="item"><p><span>34</span></p></div>
 						<div class="item"><p><span>男</span></p></div>
@@ -57,13 +57,13 @@
 						<div class="item flex_2"><p><span>13454345434</span></p></div>
 						<div class="item"><p><span>张三</span></p></div>
 						<div class="item flex_2"><p><span>信息</span></p></div>
-						<div class="item"><p><span>电话咨询</span></p></div>
-						<div class="item"><p><span>课时问题</span></p></div>
-						<div class="item"><p><span>情况说明</span></p></div>
+						<div class="item"><p><span>电话</span></p></div>
+						<div class="item"><p><span>已收集</span></p></div>
+						<div class="item"><p><span>良好</span></p></div>
 						<div class="item"><p><span>跟进中</span></p></div>
 					</li>
 					<li>
-						<div class="item"><p><span>2017.09.23</span></p></div>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
 						<div class="item"><p><span>张雪婷</span></p></div>
 						<div class="item"><p><span>34</span></p></div>
 						<div class="item"><p><span>男</span></p></div>
@@ -71,13 +71,13 @@
 						<div class="item flex_2"><p><span>13454345434</span></p></div>
 						<div class="item"><p><span>张三</span></p></div>
 						<div class="item flex_2"><p><span>信息</span></p></div>
-						<div class="item"><p><span>电话咨询</span></p></div>
-						<div class="item"><p><span>课时问题</span></p></div>
-						<div class="item"><p><span>情况说明</span></p></div>
+						<div class="item"><p><span>电话</span></p></div>
+						<div class="item"><p><span>已收集</span></p></div>
+						<div class="item"><p><span>良好</span></p></div>
 						<div class="item"><p><span>跟进中</span></p></div>
 					</li>
 					<li>
-						<div class="item"><p><span>2017.09.23</span></p></div>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
 						<div class="item"><p><span>张雪婷</span></p></div>
 						<div class="item"><p><span>34</span></p></div>
 						<div class="item"><p><span>男</span></p></div>
@@ -85,9 +85,23 @@
 						<div class="item flex_2"><p><span>13454345434</span></p></div>
 						<div class="item"><p><span>张三</span></p></div>
 						<div class="item flex_2"><p><span>信息</span></p></div>
-						<div class="item"><p><span>电话咨询</span></p></div>
-						<div class="item"><p><span>课时问题</span></p></div>
-						<div class="item"><p><span>情况说明</span></p></div>
+						<div class="item"><p><span>电话</span></p></div>
+						<div class="item"><p><span>已收集</span></p></div>
+						<div class="item"><p><span>良好</span></p></div>
+						<div class="item"><p><span>跟进中</span></p></div>
+					</li>
+					<li>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
+						<div class="item"><p><span>张雪婷</span></p></div>
+						<div class="item"><p><span>34</span></p></div>
+						<div class="item"><p><span>男</span></p></div>
+						<div class="item flex_2"><p><span>北京市朝阳区</span></p></div>
+						<div class="item flex_2"><p><span>13454345434</span></p></div>
+						<div class="item"><p><span>张三</span></p></div>
+						<div class="item flex_2"><p><span>信息</span></p></div>
+						<div class="item"><p><span>电话</span></p></div>
+						<div class="item"><p><span>已收集</span></p></div>
+						<div class="item"><p><span>良好</span></p></div>
 						<div class="item"><p><span>跟进中</span></p></div>
 					</li>
 				</ul>
