--- a/DEV/school_classManagement.html
+++ b/DEV/school_classManagement.html
@@ -31,12 +31,12 @@
 	<div class="main_box" id="main_box">
 		<div class="main">
 
-			<div class="top_info">
-				<a href="JavaScript:;" class="btn"><i>+</i>添加班级</a>
+			<div class="page_head">
 				<span>开课班级 100个</span>
 				<span>授课教师 12个</span>
 				<span>正式学员 216人</span>
 				<span>试听学员 12人</span>
+				<a href="JavaScript:;" class="btn"><i>+</i>添加班级</a>
 			</div>
 
 			<div class="pub_list">
