--- a/DEV/school_studentManagement.html
+++ b/DEV/school_studentManagement.html
@@ -33,7 +33,7 @@
 
 			<div class="pub_list">
 				<div class="head">
-					<span>录入时间</span>
+					<span class="flex_2">录入时间</span>
 					<span>姓名</span>
 					<span>班级</span>
 					<span>年龄</span>
@@ -46,7 +46,7 @@
 				<ul class="body">
 
 					<li>
-						<div class="item"><p><span>2017.09.23</span></p></div>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
 						<div class="item"><p><span>张雪婷</span></p></div>
 						<div class="item"><p><span>二班</span></p></div>
 						<div class="item"><p><span>34</span></p></div>
@@ -57,7 +57,7 @@
 						<div class="item"><p><span>23</span></p></div>
 					</li>
 					<li>
-						<div class="item"><p><span>2017.09.23</span></p></div>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
 						<div class="item"><p><span>张雪婷</span></p></div>
 						<div class="item"><p><span>二班</span></p></div>
 						<div class="item"><p><span>34</span></p></div>
@@ -68,7 +68,7 @@
 						<div class="item"><p><span>23</span></p></div>
 					</li>
 					<li>
-						<div class="item"><p><span>2017.09.23</span></p></div>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
 						<div class="item"><p><span>张雪婷</span></p></div>
 						<div class="item"><p><span>二班</span></p></div>
 						<div class="item"><p><span>34</span></p></div>
@@ -79,7 +79,7 @@
 						<div class="item"><p><span>23</span></p></div>
 					</li>
 					<li>
-						<div class="item"><p><span>2017.09.23</span></p></div>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
 						<div class="item"><p><span>张雪婷</span></p></div>
 						<div class="item"><p><span>二班</span></p></div>
 						<div class="item"><p><span>34</span></p></div>
@@ -90,7 +90,7 @@
 						<div class="item"><p><span>23</span></p></div>
 					</li>
 					<li>
-						<div class="item"><p><span>2017.09.23</span></p></div>
+						<div class="item flex_2"><p><span>2017.09.23</span></p></div>
 						<div class="item"><p><span>张雪婷</span></p></div>
 						<div class="item"><p><span>二班</span></p></div>
 						<div class="item"><p><span>34</span></p></div>
