--- a/DEV/zone_add.html
+++ b/DEV/zone_add.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>DEMO</title>
+	<title>机构-校区门店-添加校区</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -29,22 +29,70 @@
 
 	<div class="main_box" id="main_box">
 		<div class="main">
-			<div class="content">
+
+
+		<div class="pub_form">
+			<ul>
+				<li>
+					<span>校区名称</span>
+					<input type="text" class="long" placeholder="请输入">
+				</li>
+				<li>
+					<span>负责人</span>
+					<input type="text" class="short" placeholder="请输入">
+				</li>
+				<li>
+					<span>手机</span>
+					<input type="text" class="short" placeholder="请输入">
+				</li>
+				<li>
+					<span>固定电话</span>
+					<input type="text" class="short" placeholder="请输入">
+				</li>
+				<li>
+					<span>地址</span>
+					<input type="text" class="long" placeholder="请输入">
+				</li>
+				<li>
+					<span>时间</span>
+					<input type="date" placeholder="请输入">
+				</li>
+				<li>
+					<span>校区类型</span>
+					<p class="raioBox1">
+						<label><input type="radio">直营</label>
+						<label><input type="radio">合作</label>
+					</p>
+					<p class="raioBox2">
+						<label><input type="radio">商场</label>
+						<label><input type="radio">社区</label>
+					</p>
+				</li>
+				<li>
+					<span>主营项目</span>
+					<input type="text" class="long" placeholder="请输入">
+				</li>
+			</ul>
+			<a href="JavaScript:;" class="btn">提交</a>
+		</div>
+
+
+<!-- 			<div class="content">
 				<ul class="formBox">
 					<li>
 						<span>校区名称</span>
 						<input name='zone_name' type="text" />
 					</li>
 					<li>
-						<span>负责人</span>
+						<span></span>
 						<input name='principal' type="text" />
 					</li>
 					<li>
-						<span>手机</span>
+						<span></span>
 						<input name='phone' type="text" />
 					</li>
 					<li>
-						<span>固定电话</span>
+						<span></span>
 						<input name='tel' type="text" />
 					</li>
 					<li>
@@ -72,7 +120,8 @@
 					</li>
 				</ul>
 				<button class="submitBtn on">提交</button>
-		</div>
+		</div> -->
+
 	</div>
 </body>
 
