--- a/DEV/zone_classList.html
+++ b/DEV/zone_classList.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>DEMO</title>
+	<title>机构-课程资源</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -29,7 +29,65 @@
 
 	<div class="main_box" id="main_box">
 		<div class="main">
-			<div class="content">
+
+			<div class="page_head">
+				<h3>课程资源</h3>
+				<a href="JavaScript:;" class="btn"><i>+</i>添加分类</a>
+			</div>
+
+			<div class="pub_list">
+				<div class="head">
+						<span>课程分类名</span>
+						<span>子课（课时）</span>
+						<span>课程对象</span>
+						<span>课程目标</span>
+						<span>课程介绍</span>
+						<span>收费模式</span>
+						<span>教学调研</span>
+						<span>操作</span>
+				</div>
+				<ul class="body">
+					<li>
+						<div class="item"><p><span>绘画</span></p></div>
+						<div class="item"><p><span>15节</span></p></div>
+						<div class="item"><p><span>3~6岁</span></p></div>
+						<div class="item"><p><span>发散思维</span></p></div>
+						<div class="item"><p><span>课程大纲</span></p></div>
+						<div class="item"><p><span>按课时</span></p></div>
+						<div class="item"><p><span><a href="javascript:;">点击查看</a></span></p></div>
+						<div class="item"><p><span><a href="javascript:;"><i></i>编辑</a></span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>绘画</span></p></div>
+						<div class="item"><p><span>15节</span></p></div>
+						<div class="item"><p><span>3~6岁</span></p></div>
+						<div class="item"><p><span>发散思维</span></p></div>
+						<div class="item"><p><span>课程大纲</span></p></div>
+						<div class="item"><p><span>按课时</span></p></div>
+						<div class="item"><p><span><a href="javascript:;">点击查看</a></span></p></div>
+						<div class="item"><p><span><a href="javascript:;"><i></i>编辑</a></span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>绘画</span></p></div>
+						<div class="item"><p><span>15节</span></p></div>
+						<div class="item"><p><span>3~6岁</span></p></div>
+						<div class="item"><p><span>发散思维</span></p></div>
+						<div class="item"><p><span>课程大纲</span></p></div>
+						<div class="item"><p><span>按课时</span></p></div>
+						<div class="item"><p><span><a href="javascript:;">点击查看</a></span></p></div>
+						<div class="item"><p><span><a href="javascript:;"><i></i>编辑</a></span></p></div>
+					</li>
+
+				</ul>
+				<div class="page">
+					<p>
+						<a href="JavaScript:;" class="prev">0</a><a href="JavaScript:;" class="on">1</a><a href="JavaScript:;">2</a><a href="JavaScript:;">3</a><a href="JavaScript:;">4</a><a href="JavaScript:;" class="next">0</a>
+					</p>
+				</div>
+			</div>
+
+
+			<!-- <div class="content">
 				<div class="header">
 					<h3>课程资源</h3>
 					<button class="on"><i>+</i>添加分类</button>
@@ -56,7 +114,8 @@
 						<span><a href="javascript:;"><i></i>编辑</a></span>
 					</li>
 				</ul>
-			</div>
+			</div> -->
+
 		</div>
 	</div>
 </body>
