--- a/DEV/zone_login.html
+++ b/DEV/zone_login.html
@@ -11,7 +11,6 @@
 	<div class="top_box">
 		<img src="./images/logo.png"/>
 		<p>管好资源、看清数据<span class="times" id="times"></span></p>
-		<span class="user">宇文靖云<a href="JavaScript:;">退出</a>
 		</span>
 	</div>
 
@@ -26,7 +25,6 @@
 				<p>打开微信，进入培生素公众号，进入我的培生素选择扫一扫，扫描上图二维码登录</p>
 			</div>
 			<!-- 扫描登录end -->
-
 
 
 			<!-- 账号密码登录start -->
@@ -52,13 +50,11 @@
 			<!-- 账号密码登录end -->
 
 
-
 			<!-- 扫描成功start -->
 			<div class="loginStatus_success none">
 				<p>扫描成功，请在手机上根据提示确认登录</p>
 			</div>
 			<!-- 扫描成功end -->
-
 
 
 			<!-- 扫描失败start -->
@@ -69,9 +65,8 @@
 			<!-- 扫描失败end -->
 
 
-
 		</div>
 	</div>
-	<p class="layout_footer">北京某某某科技有限公司</p>
+	<p class="layout_footer">京 ICP 证 17002468 号|Copyright © 2006-2017, website.com, All Rights Reserved</p>
   </body>
 </html>
