--- a/DEV/zone_systemLog.html
+++ b/DEV/zone_systemLog.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>DEMO</title>
+	<title>系统日志</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -30,8 +30,55 @@
 
 	<div class="main_box" id="main_box">
 		<div class="main">
+			<h3 class="page_title">系统日志</h3>
+			<div class="pub_list">
+				<div class="head">
+					<span>时间</span>
+					<span>账号</span>
+					<span class="flex_3">操作</span>
+				</div>
+				<ul class="body">
+
+					<li>
+						<div class="item"><p><span>2017年10月05日20:15:41</span></p></div>
+						<div class="item"><p><span>wuyeh0192819</span></p></div>
+						<div class="item flex_3"><p><span>本地添加班级</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>2017年10月05日20:15:41</span></p></div>
+						<div class="item"><p><span>wuyeh0192819</span></p></div>
+						<div class="item flex_3"><p><span>本地添加班级</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>2017年10月05日20:15:41</span></p></div>
+						<div class="item"><p><span>wuyeh0192819</span></p></div>
+						<div class="item flex_3"><p><span>本地添加班级</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>2017年10月05日20:15:41</span></p></div>
+						<div class="item"><p><span>wuyeh0192819</span></p></div>
+						<div class="item flex_3"><p><span>本地添加班级</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>2017年10月05日20:15:41</span></p></div>
+						<div class="item"><p><span>wuyeh0192819</span></p></div>
+						<div class="item flex_3"><p><span>本地添加班级</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>2017年10月05日20:15:41</span></p></div>
+						<div class="item"><p><span>wuyeh0192819</span></p></div>
+						<div class="item flex_3"><p><span>本地添加班级</span></p></div>
+					</li>
+				</ul>
+				<div class="page">
+					<p>
+						<a href="JavaScript:;" class="prev">0</a><a href="JavaScript:;" class="on">1</a><a href="JavaScript:;">2</a><a href="JavaScript:;">3</a><a href="JavaScript:;">4</a><a href="JavaScript:;" class="next">0</a>
+					</p>
+				</div>
+
+<!-- 
 			<div class="logBox">
-				<h3>系统日志</h3>
+
 				<ul class="logList">
 					<li class="logTitle">
 						<p>时间</p>
@@ -49,6 +96,7 @@
 						<p>本地添加班级</p>
 					</li>
 				</ul>
+			</div> -->
 			</div>
 		</div>
 	</div>
