--- a/DEV/zone_teacherList.html
+++ b/DEV/zone_teacherList.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>DEMO</title>
+	<title>机构-教师员工</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -30,36 +30,64 @@
 
 	<div class="main_box" id="main_box">
 		<div class="main">
-			<div class="content">
-				<ul>
-					<li class="title">
-						<h3>教师员工</h3>
-						<a href="javascript:;"><i>+</i> 添加</a>
-					</li>
-					<li class="header">
-						<p>工号</p>
-						<p>姓名</p>
-						<p>所属校区</p>
-						<p>科目</p>
-						<p>类别</p>
-						<p>入职时间</p>
-						<p>状态</p>
-						<p>操作</p>
-					</li>
 
-					<li class="list">
-						<p>89756</p>
-						<p>刘小源</p>
-						<p>常营</p>
-						<p>美术</p>
-						<p>教师</p>
-						<p>2017.7.21</p>
-						<p>正常</p>
-						<p><a href="">详情</a></p>
+
+
+			<div class="pub_list">
+				<div class="head">
+					<span>工号</span>
+					<span>姓名</span>
+					<span>所属校区</span>
+					<span>科目</span>
+					<span>类别</span>
+					<span>入职时间</span>
+					<span>状态</span>
+					<span>操作</span>
+				</div>
+				<ul class="body">
+
+					<li>
+						<div class="item"><p><span>89756</span></p></div>
+						<div class="item"><p><span>刘小源</span></p></div>
+						<div class="item"><p><span>常营</span></p></div>
+						<div class="item"><p><span>美术</span></p></div>
+						<div class="item"><p><span>教师</span></p></div>
+						<div class="item"><p><span>2017.7.21</span></p></div>
+						<div class="item"><p><span>正常</span></p></div>
+						<div class="item"><p><span><a href="22">详情</a></span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>89756</span></p></div>
+						<div class="item"><p><span>刘小源</span></p></div>
+						<div class="item"><p><span>常营</span></p></div>
+						<div class="item"><p><span>美术</span></p></div>
+						<div class="item"><p><span>教师</span></p></div>
+						<div class="item"><p><span>2017.7.21</span></p></div>
+						<div class="item"><p><span>正常</span></p></div>
+						<div class="item"><p><span><a href="22">详情</a></span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>89756</span></p></div>
+						<div class="item"><p><span>刘小源</span></p></div>
+						<div class="item"><p><span>常营</span></p></div>
+						<div class="item"><p><span>美术</span></p></div>
+						<div class="item"><p><span>教师</span></p></div>
+						<div class="item"><p><span>2017.7.21</span></p></div>
+						<div class="item"><p><span>正常</span></p></div>
+						<div class="item"><p><span><a href="22">详情</a></span></p></div>
 					</li>
 				</ul>
-				<button class="importBtn on"><i></i>批量导入</button>
+				<div class="page">
+					<p>
+						<a href="JavaScript:;" class="prev">0</a><a href="JavaScript:;" class="on">1</a><a href="JavaScript:;">2</a><a href="JavaScript:;">3</a><a href="JavaScript:;">4</a><a href="JavaScript:;" class="next">0</a>
+					</p>
+				</div>
 			</div>
+
+			<div class="run">
+				<a href="JavaScript:;" class="btn">批量导入</a>
+			</div>
+
 		</div>
 	</div>
 </body>
