--- a/DEV/zone_teacherSet.html
+++ b/DEV/zone_teacherSet.html
@@ -3,7 +3,7 @@
 
 	<head>
 	<meta charset="UTF-8">
-	<title>DEMO</title>
+	<title>机构-教师员工-教师编辑</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 	</head>
@@ -30,13 +30,78 @@
 
 		<div class="main_box" id="main_box">
 			<div class="main">
-				<div class="content">
+
+				<div class="pub_form">
+					<ul>
+						<li>
+							<span>教师姓名</span>
+							<input type="text" class="normal" placeholder="请输入">
+							<span>教师性别</span>
+							<select>
+								<option>男</option>
+								<option>女</option>>
+							</select>
+						</li>
+						<li>
+							<span>第二称谓</span>
+							<input type="text" class="normal" placeholder="请输入">
+						</li>
+						<li>
+							<span>出生年月</span>
+							<input type="date" class="normal" placeholder="请输入">
+							<span>机关</span>
+							<select>
+								<option>北京</option>
+								<option>河北</option>>
+							</select>
+						</li>
+						<li>
+							<span>身份证号</span>
+							<input type="text" class="normal" placeholder="请输入">
+							<span>工号</span>
+							<input type="text" class="short" placeholder="请输入">
+						</li>
+						<li>
+							<span>手机号</span>
+							<input type="text" class="normal" placeholder="请输入">
+							<span>所属校区</span>
+							<select name="" id="">
+								<option value="">北京</option>
+								<option value="">天津</option>
+								<option value="">河北</option>
+							</select>
+						</li>
+						<li>
+							<span>当前住址</span>
+							<input type="text" class="long" placeholder="请输入">
+						</li>
+						<li>
+							<span>入职时间</span>
+							<input type="date" class="normal" />
+							<span>类别</span>
+							<select name="" id="">
+								<option value="">北京</option>
+								<option value="">天津</option>
+								<option value="">河北</option>
+							</select>
+						</li>
+						<li>
+							<span>其他信息</span>
+							<input type="text" class="long" placeholder="请输入">
+						</li>
+					</ul>
+					<a href="JavaScript:;" class="btn">保存</a>
+				</div>
+
+
+
+			<!-- 	<div class="content">
 						<p>
 							<span>教师姓名</span>
 							<input type="text" />
 						</p>
 						<p>
-							<span>教师性别</span>
+							<span></span>
 							<select name="" id="">
 								<option value="">男</option>
 								<option value="">女</option>
@@ -44,7 +109,7 @@
 						</p>
 						<br />
 						<p>
-							<span>第二称谓</span>
+							<span></span>
 							<input type="text" />
 						</p>
 						<br />
@@ -107,7 +172,8 @@
 						</p>
 						<br />
 						<button class="on">保存</button>
-				</div>
+				</div> -->
+
 			</div>
 		</div>
 	</body>
