--- a/DEV/zone_detail.html
+++ b/DEV/zone_detail.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>DEMO</title>
+	<title>机构-校区门店-校区详情</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -74,7 +74,69 @@
 					</div>
 					<button class="on" id="editZone"><i class="icon"></i>修改校区信息</button>
 				</div>
-				<div class="zoneList">
+
+			<h3 class="page_title">校区列表</h3>
+			<div class="pub_list">
+				<div class="head">
+					<span>校区名称</span>
+					<span>负责人</span>
+					<span>电话</span>
+					<span>校址</span>
+					<span>校区类型</span>
+					<span>主营项目</span>
+				</div>
+				<ul class="body">
+
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+				</ul>
+				<div class="page">
+					<p>
+						<a href="JavaScript:;" class="prev">0</a><a href="JavaScript:;" class="on">1</a><a href="JavaScript:;">2</a><a href="JavaScript:;">3</a><a href="JavaScript:;">4</a><a href="JavaScript:;" class="next">0</a>
+					</p>
+				</div>
+			</div>
+
+
+				<!-- <div class="zoneList">
 						<h3>校区列表</h3>
 						<ul class="listBox">
 							<li class="title">
@@ -94,7 +156,7 @@
 								<span>培训、英语、教育</span>
 							</li>
 						</ul>
-				</div>
+				</div> -->
 			</div>
 		</div>
 	</div>
