--- a/DEV/zone_list.html
+++ b/DEV/zone_list.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>DEMO</title>
+	<title>机构-校区门店</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
@@ -29,7 +29,75 @@
 
 	<div class="main_box" id="main_box">
 		<div class="main">
-			<div class="content">
+
+			<div class="page_head">
+				<h3>校区列表</h3>
+				<a href="JavaScript:;" class="btn"><i>+</i>添加新校区</a>
+			</div>
+
+			<div class="pub_list">
+				<div class="head">
+					<span>校区名称</span>
+					<span>负责人</span>
+					<span>电话</span>
+					<span>校址</span>
+					<span>校区类型</span>
+					<span>主营项目</span>
+				</div>
+				<ul class="body">
+
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+					<li>
+						<div class="item"><p><span>大望路幼儿店</span></p></div>
+						<div class="item"><p><span>王小二</span></p></div>
+						<div class="item"><p><span>17872877777</span></p></div>
+						<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+						<div class="item"><p><span>直营-社区</span></p></div>
+						<div class="item"><p><span>培训、英语、教育</span></p></div>
+					</li>
+				</ul>
+				<div class="page">
+					<p>
+						<a href="JavaScript:;" class="prev">0</a><a href="JavaScript:;" class="on">1</a><a href="JavaScript:;">2</a><a href="JavaScript:;">3</a><a href="JavaScript:;">4</a><a href="JavaScript:;" class="next">0</a>
+					</p>
+				</div>
+			</div>
+
+
+
+
+			<!-- <div class="content">
 				<div class="zoneList">
 					<div class="titleBox">
 						<h3>校区列表</h3>
@@ -54,7 +122,7 @@
 						</li>
 					</ul>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>
 </body>
