--- a/DEV/zone_teachDetail.html
+++ b/DEV/zone_teachDetail.html
@@ -3,13 +3,14 @@
 
 <head>
 	<meta charset="UTF-8">
-	<title>DEMO</title>
+	<title>机构-课程资源-教学教研-详情</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="format-detection" content="telephone=no">
 </head>
 
 <body>
 	<div class="top_box">
+		<img src="./images/logo.png"/>
 		<p>管好资源、看清数据<span class="times" id="times"></span></p>
 		<span class="user">宇文靖<a href="JavaScript:;">退出</a>
 					</span>
