增加webpack插入script排序、公共表单验证/获取/提交方法

--- a/zone_login.html
+++ b/zone_login.html
@@ -28,10 +28,10 @@
 			<div class="passwordLogin">
 				<a href="JavaScript:;" class="loginType" data-type="passwordLogin"></a>
 				<h5>密码登录</h5>
-				<div class="pub_form">
+				<div class="form">
 					<ul>
 						<li>
-							<input type="text" name="jigou" data-validate="number" data-must="1" placeholder="机构代码">
+							<input type="text" placeholder="机构代码">
 						</li>
 						<li>
 							<input type="text" placeholder="账号">
