--- a/DEV/zone_login.html
+++ b/DEV/zone_login.html
@@ -34,10 +34,10 @@
 							<input type="text" name="jigou" data-validate="number" data-must="1" placeholder="机构代码">
 						</li>
 						<li>
-							<input type="text" placeholder="账号">
+							<input type="text" name="userId" data-validate="number" data-must="1"  placeholder="账号">
 						</li>
 						<li>
-							<input type="password" placeholder="密码">
+							<input type="password" name="password" data-validate="password" data-must="1"  placeholder="账号">
 						</li>
 					</ul>
 					<p class="none">机构代码、用户名和密码不匹配</p>
