--- a/DEV/SchoolHome.html
+++ b/DEV/SchoolHome.html
@@ -29,6 +29,11 @@
 
 	<div class="main_box" id="main_box">
 		<div class="main">
+
+			<!-- 隐藏域start -->
+			<input type="hidden" id="code" value="12543" >
+			<!-- 隐藏域end -->
+
 			<div class="content">
 				<div class="header">
 					<div class="left">
