--- a/DEV/zoneHome.html
+++ b/DEV/zoneHome.html
@@ -31,36 +31,41 @@
 	<div class="main_box" id="main_box">
 		<div class="main">
 
-		<div class="page_head">
-			<input type="date" class="run" />
-		</div>
 
-		<div class="class_show">
-			<ul class="item_box">
-				<li class="item">
-					<h6>班级1-课时2</h6>
-					<p>宇文靖</p>
-					<span class="mark">❤</span>
-				</li>
-			</ul>
-			<div class="times">
-				<span>8:00</span>
-				<span>10:00</span>
-				<span>12:00</span>
-				<span>14:00</span>
-				<span>16:00</span>
-				<span>18:00</span>
-				<span>20:00</span>
+			<!-- 隐藏域start ~code、zoneid~ -->
+			<input type="hidden" id="code" value="545454" />
+			<input type="hidden" id="zoneid" value="7856" />
+			<!-- 隐藏域end -->
+
+			<div class="page_head">
+				<input type="date" class="run" />
 			</div>
-		</div>
 
-		<p class="class_info">
-			<span>今日开课班级 100个</span>
-			<span>今日授课教师 12个</span>
-			<span>今日正式学员 216人</span>
-			<span>今日试听学员 12人</span>
-		</p>
+			<div class="class_show">
+				<ul class="item_box">
+					<li class="item">
+						<h6>班级1-课时2</h6>
+						<p>宇文靖</p>
+						<span class="mark">❤</span>
+					</li>
+				</ul>
+				<div class="times">
+					<span>8:00</span>
+					<span>10:00</span>
+					<span>12:00</span>
+					<span>14:00</span>
+					<span>16:00</span>
+					<span>18:00</span>
+					<span>20:00</span>
+				</div>
+			</div>
 
+			<p class="class_info">
+				<span>今日开课班级 100个</span>
+				<span>今日授课教师 12个</span>
+				<span>今日正式学员 216人</span>
+				<span>今日试听学员 12人</span>
+			</p>
 
 
 		</div>
