--- a/DEV/ForgetPasword.html
+++ b/DEV/ForgetPasword.html
@@ -18,9 +18,6 @@
 	<div class="layout_center">
 		<div class="content_box">
 
-
-
-
 			<!-- 获取验证码start -->
 			<div class="verificationCode">
 				<h5>获取验证码</h5>
@@ -34,14 +31,11 @@
 							<a href="JavaScript:;" class="btn">获取验证码</a>
 						</li>
 					</ul>
-					<p>请输入争取手机号</p>
+					<p>请输入正确手机号</p>
 					<a href="JavaScript:;" class="btn">下一步</a>
 				</div>
 			</div>
 			<!-- 获取验证码end -->
-
-
-
 
 			<!-- 重置密码start -->
 			<div class="passwordReset none">
@@ -60,10 +54,6 @@
 				</div>
 			</div>
 			<!-- 重置密码end -->
-
-
-
-
 
 
 		</div>
