--- a/DEV/SchoolHome.html
+++ b/DEV/SchoolHome.html
@@ -12,18 +12,21 @@
 	<div class="top_box">
 		<img src="./images/logo.png" />
 		<p>管好资源、看清数据<span class="times" id="times"></span></p>
-		<span class="user">宇文靖<a href="JavaScript:;">退出</a></span>
+		<span class="user">宇文靖<a href="JavaScript:;" id="logout">退出</a></span>
 	</div>
+	<!-- 隐藏域start school_code -->
+	<input type="hidden" id="school_code" value="123">
+	<!-- 隐藏域end -->
 
 	<div class="left_nav" id="left_nav">
 		<ul>
-			<li><a href="#">首页</a></li>
-			<li><a href="#">校区</a></li>
-			<li class="on"><a href="#">课程资源</a></li>
-			<li><a href="#">教学教研</a></li>
-			<li><a href="#">教职员工</a></li>
-			<li><a href="#">账号设置</a></li>
-			<li><a href="#">系统资源</a></li>
+			<li class="on"><a href="/pss/goSchoolHome">首页</a></li>
+			<li><a href="/pss/goZone">校区</a></li>
+			<li><a href="/pss/goCourse">课程资源</a></li>
+			<li><a href="/pss/goPlan">教学科研</a></li>
+			<li><a href="/pss/goTeacher">教师员工</a></li>
+			<li><a href="/pss/goAccountSet">账号设置</a></li>
+			<li><a href="/pss/goEventLog">系统日志</a></li>
 		</ul>
 	</div>
 
