机构首页修改

--- a/DEV/SchoolHome.html
+++ b/DEV/SchoolHome.html
@@ -42,7 +42,7 @@
 					<div class="left">
 						<h3>经营指标</h3>
 						<ul>
-							<li>
+<!-- 							<li>
 								<span>今日流水实收</span>
 								<em>¥378400</em>
 							</li>
@@ -69,7 +69,7 @@
 							<li>
 								<span>班级数</span>
 								<em>30人</em>
-							</li>
+							</li> -->
 						</ul>
 					</div>
 					<div class="echartsBox">
@@ -77,33 +77,40 @@
 						</div>
 						<div class="selectBox">
 							<select name="" id="">
-								<option value="">实收流水</option>
-								<option value="">选项二</option>
-								<option value="">选项三</option>
+								<option value="income">今日流水实收</option>
+								<option value="outcome">杂项支出</option>
+								<option value="visit_num">今日咨询登记数</option>
+								<option value="sign_num">今日报名数</option>
+								<option value="reserve_num">预约发出数</option>
+								<option value="teacher_leave_num">今天请假数</option>
+								<option value="class_num">班级数</option>
 							</select>
 						</div>
 					</div>
 				</div>
+
 				<div class="zoneList">
-						<h3>校区列表</h3>
-						<ul class="listBox">
-							<li class="title">
-								<span>校区名称</span>
-								<span>负责人</span>
-								<span>电话</span>
-								<span>校址</span>
-								<span>校区类型</span>
-								<span>主营项目</span>
-							</li>
-							<li class="list">
-								<span>大望路幼儿店</span>
-								<span>王小二</span>
-								<span>17872877777</span>
-								<span>朝阳区大望路店38号</span>
-								<span>直营-社区</span>
-								<span>培训、英语、教育</span>
+					<h3>校区列表</h3>
+					<div class="pub_list">
+						<div class="head">
+							<span>校区名称</span>
+							<span>负责人</span>
+							<span>电话</span>
+							<span>校址</span>
+							<span>校区类型</span>
+							<span>主营项目</span>
+						</div>
+						<ul class="body">
+							<li>
+								<div class="item"><p><span>大望路幼儿店</span></p></div>
+								<div class="item"><p><span>2王小二3</span></p></div>
+								<div class="item"><p><span>17872877777</span></p></div>
+								<div class="item"><p><span>朝阳区大望路店38号</span></p></div>
+								<div class="item"><p><span>直营-社区</span></p></div>
+								<div class="item"><p><span>培训、英语、教育</span></p></div>
 							</li>
 						</ul>
+					</div>
 				</div>
 
 
