--- a/DEV/zoneHome.html
+++ b/DEV/zoneHome.html
@@ -18,7 +18,7 @@
 
 	<!-- 隐藏域start school_code -->
 	<input type="hidden" id="zone_code" value="123">
-	<input type="hidden" id="zoneid" value="123">
+	<input type="hidden" id="zone_zoneid" value="123">
 	<!-- 隐藏域end -->
 
 	<div class="left_nav" id="left_nav">
