--- a/DEV/SchoolHome.html
+++ b/DEV/SchoolHome.html
@@ -76,7 +76,7 @@
 						<div class="echarts" id="echart1">
 						</div>
 						<div class="selectBox">
-							<select name="" id="">
+							<select name="" id="echartSelect">
 								<option value="income">今日流水实收</option>
 								<option value="outcome">杂项支出</option>
 								<option value="visit_num">今日咨询登记数</option>
